bug fix on title gen to handle empty title. Turn DONE green. Fixed popup text color in Dark mode. Added new web site upgrade message

--- a/app/jquery.treetable.css
+++ b/app/jquery.treetable.css
@@ -77,6 +77,9 @@ table.treetable span.btText {
 table.treetable span.keyword {
   color: #e03030;
 }
+table.treetable span.keyword.DONE {
+  color: #0f970f;
+}
 
 table.treetable tr.hovered {
   background-color: var(--btRowHovered);
